feat: category product shelf

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -4148,6 +4148,9 @@ details.collapse summary::-webkit-details-marker {
 .w-32 {
   width: 8rem;
 }
+.w-36 {
+  width: 9rem;
+}
 .w-44 {
   width: 11rem;
 }
