--- a/tailwind.css
+++ b/tailwind.css
@@ -28,6 +28,10 @@
   animation: progress-frame ease normal
 }
 
+.reset_styles > * {
+  all: revert;
+}
+
 @keyframes progress-frame {
   0% {
     --dot-progress: 0%
