--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -3922,6 +3922,9 @@ details.collapse summary::-webkit-details-marker {
 .mt-8 {
   margin-top: 2rem;
 }
+.mt-\[-8px\] {
+  margin-top: -8px;
+}
 .mt-\[5px\] {
   margin-top: 5px;
 }
@@ -4002,9 +4005,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .h-9 {
   height: 2.25rem;
-}
-.h-\[100px\] {
-  height: 100px;
 }
 .h-\[10px\] {
   height: 10px;
@@ -4120,9 +4120,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .min-h-\[535px\] {
   min-height: 535px;
-}
-.min-h-\[660px\] {
-  min-height: 660px;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -4250,9 +4247,6 @@ details.collapse summary::-webkit-details-marker {
 .w-\[80vw\] {
   width: 80vw;
 }
-.w-\[90px\] {
-  width: 90px;
-}
 .w-auto {
   width: auto;
 }
@@ -4377,9 +4371,6 @@ details.collapse summary::-webkit-details-marker {
 }
 .max-w-\[80px\] {
   max-width: 80px;
-}
-.max-w-\[calc\(100\%_-_394px\)\] {
-  max-width: calc(100% - 394px);
 }
 .max-w-full {
   max-width: 100%;
@@ -6491,6 +6482,10 @@ details.collapse summary::-webkit-details-marker {
     margin-right: auto;
   }
 
+  .lg\:mb-0 {
+    margin-bottom: 0px;
+  }
+
   .lg\:ml-14 {
     margin-left: 3.5rem;
   }
@@ -6501,6 +6496,10 @@ details.collapse summary::-webkit-details-marker {
 
   .lg\:mr-4 {
     margin-right: 1rem;
+  }
+
+  .lg\:mt-12 {
+    margin-top: 3rem;
   }
 
   .lg\:mt-6 {
@@ -6673,9 +6672,19 @@ details.collapse summary::-webkit-details-marker {
     padding-right: 0px;
   }
 
+  .lg\:px-11 {
+    padding-left: 2.75rem;
+    padding-right: 2.75rem;
+  }
+
   .lg\:px-2 {
     padding-left: 0.5rem;
     padding-right: 0.5rem;
+  }
+
+  .lg\:px-4 {
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 
   .lg\:px-5 {
