feat: image card height

--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -4045,6 +4045,9 @@ details.collapse summary::-webkit-details-marker {
 .h-\[52px\] {
   height: 52px;
 }
+.h-\[625px\] {
+  height: 625px;
+}
 .h-\[666px\] {
   height: 666px;
 }
@@ -4198,6 +4201,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .w-\[287px\] {
   width: 287px;
+}
+.w-\[294px\] {
+  width: 294px;
 }
 .w-\[295px\] {
   width: 295px;
