--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -3830,6 +3830,10 @@ details.collapse summary::-webkit-details-marker {
   margin-top: 5rem;
   margin-bottom: 5rem;
 }
+.my-3 {
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
+}
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -3897,6 +3901,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .mt-12 {
   margin-top: 3rem;
+}
+.mt-14 {
+  margin-top: 3.5rem;
 }
 .mt-16 {
   margin-top: 4rem;
@@ -3972,6 +3979,9 @@ details.collapse summary::-webkit-details-marker {
 }
 .h-0\.5 {
   height: 0.125rem;
+}
+.h-10 {
+  height: 2.5rem;
 }
 .h-11 {
   height: 2.75rem;
