--- a/static/tailwind.css
+++ b/static/tailwind.css
@@ -5155,6 +5155,9 @@ details.collapse summary::-webkit-details-marker {
 .pt-1 {
   padding-top: 0.25rem;
 }
+.pt-10 {
+  padding-top: 2.5rem;
+}
 .pt-2 {
   padding-top: 0.5rem;
 }
